--- a/client/src/components/SearchProjects/_search-projects.scss
+++ b/client/src/components/SearchProjects/_search-projects.scss
@@ -8,6 +8,7 @@
         padding: 15px;
         border-radius: 50px;
         text-align: center;
+        outline: none;
     }
 
     &__add-project {
